# math_function_module

./: .gitignore  CMakeLists.txt  MakefileLinux  MakefileWindows  README.md  math_function_module.cpp  math_function_module.h  math_function_module.vcxproj  module.h  mudule.h
src/: math_function_module.cpp
